# mffRTG

./: .gitignore  CMakeLists.txt  README.md
01_triangle/: CMakeLists.txt  README.md  coloredTriangle.hpp  fractal.hpp  main.cpp  simpleTriangle.hpp  vanilla.cpp
02_simple3d/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp  simple_scene.hpp
02_simple3d/shaders/: basic.vertex.glsl
03_textures/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
03_textures/shaders/: normal_to_color.fragment.glsl  phong.fragment.glsl  simple_texture.fragment.glsl  simple_texture.program  texture_blend.fragment.glsl
04_deffered/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
04_deffered/shaders/: compositing.fragment.glsl  material_deffered.fragment.glsl  phong.program  shadowmap.fragment.glsl  simple_texture.fragment.glsl
05_shaders/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
05_shaders/shaders/: basic.vertex.glsl  basic_instanced.vertex.glsl  material.fragment.glsl  pn_triangles.control.glsl  pn_triangles.evaluation.glsl  pn_triangles.vertex.glsl  texture_blend.program
06_3d_textures/: CMakeLists.txt  main.cpp  scene_definition.hpp
06_3d_textures/shaders/: animated_texture.fragment.glsl  animated_texture.program  mip.fragment.glsl  mip.program  sphere_raycast.fragment.glsl  sphere_raycast.program
07_noise/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
07_noise/shaders/: compositing_2d.include.glsl  compositing_3d.include.glsl  noise_2d.fragment.glsl  noise_2d.program  noise_3d.fragment.glsl  noise_3d.program  noise_animated.fragment.glsl  noise_animated.program  noise_utils.include.glsl  perlin.include.glsl  simplex.include.glsl  terrain.control.glsl  terrain.evaluation.glsl  terrain.fragment.glsl  terrain.program  terrain.vertex.glsl  terrain_solid_color.program  worley.include.glsl
08_webgl/: README.md  index.html  package.json  rotating_cube.html  rotating_cube.js
08_webgl/webgl/: rotating_cube.html  rotating_cube.js  textured_cube.html  textured_cube.js  textured_cube_vao.js  utils.js
09_compute/: CMakeLists.txt  convolution.cpp  main.cpp  scan.cpp
09_compute/shaders/: convolution.compute.glsl  multiply.compute.glsl  scan_local.compute.glsl
10_deffered_2/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
10_deffered_2/shaders/: compositing.fragment.glsl  compositing2.compute.glsl  convolution.compute.glsl  final_output.fragment.glsl  final_output.program  material_deffered.fragment.glsl
11_opencl/: CMakeLists.txt  README.md  cl_utils.hpp  conway.cpp  diffusion.cpp  main.cpp  opencl_utils.hpp
11_opencl/kernels/: convolution.cl  conway.cl  diffusion.cl
12_l-system/: CMakeLists.txt  l_system.hpp  l_system_generator.hpp  main.cpp  renderer.hpp  rule_set.hpp  scene_definition.hpp
12_l-system/rules/: tree_01.rule  tree_02.rule
12_l-system/shaders/: branches.geometry.glsl  branches.program  branches.vertex.glsl
Assignments/A01_particles/: CMakeLists.txt  Time.hpp  main.cpp  particle.hpp  particle_system.hpp  renderer.hpp  scene_definition.hpp
Assignments/A01_particles/3d_textures/: blob.mhd  blob.raw  spark.mhd  spark.raw
Assignments/A01_particles/shaders/: particles.fragment.glsl  particles.program  particles.vertex.glsl
Assignments/A02_SSAO/: CMakeLists.txt  main.cpp  renderer.hpp  scene_definition.hpp
Assignments/A02_SSAO/shaders/: compositing.fragment.glsl  material_deffered.fragment.glsl.bac  occlusion.fragment.glsl  occlusion.program  occlusionblur.fragment.glsl
utils/: camera.hpp  cube.hpp  error_handling.hpp  framebuffer.hpp  geometry_factory.hpp  instanced_mesh_object.hpp  material_factory.hpp  mesh_object.hpp  obj_file_loading.cpp  ogl_geometry_construction.cpp  ogl_geometry_construction.hpp  ogl_geometry_factory.cpp  ogl_geometry_factory.hpp  ogl_material_factory.cpp  ogl_material_factory.hpp  ogl_resource.hpp  scene_object.hpp  shader.hpp  simple_scene.hpp  spotlight.hpp  vertex.hpp  window.hpp
